--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Mostafa Sholkamy",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack --watch src --mode development",
+    "dev": "webpack --watch src/main.js --mode development",
     "build": "webpack --mode production"
   },
   "devDependencies": {
